Added build/run instructions